# santafe

./: .gitignore  .pre-commit-config.yaml  AGGREGATE_CODEBASE.md  CLAUDE.md  README.md  backup.md  log.csv  main.aux  main.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  run_experiments.sh  tracker.md
analysis/: analyze_results.py  analyze_strategy_patterns.py  analyze_tournament.py  gd_zic_failure_analysis.md
archive/analysis/: TOURNAMENT_EXECUTION_SUMMARY.md  TOURNAMENT_STATUS.md  ZI2_DEEP_DIVE_VALIDATION_REPORT.md  new_tournament_section.md  tournament_summary.md  tournament_tables_output.md
archive/debug_scripts/: analyze_zip_fix.py  debug_efficiency_crash.py  debug_eval.py  test_zic_fix.py
archive/phase4_training/: PHASE4_RL_README.md  PHASE4_TRAINING_RESULTS.md  RL_EXPERIMENTS.md  TRAINING_SUMMARY.md  eval_curriculum.txt  eval_curriculum_fixed.txt  training_log.txt  training_log_mixed.txt  training_log_mixed_v2.txt  training_log_mixed_v3.txt  training_log_v2.txt
archive/phase5_llm/: PHASE5_LLM_IMPLEMENTATION.md  PHASE5_LLM_IMPLEMENTATION_SUMMARY.md  PHASE5_PAPER_STATUS.md
archive/traces/: trace.txt  trace_full.txt  trace_full_v2.txt
checklists/: behavior.md  configs_and_logs.md  env.md  glossary.md  gpt.md  info.md  literature.md  metrics.md  paper.md  questions.md  results.md  rules.md  tournament.md  traders.md  visual.md
checkpoints/: training_log.txt  training_v2_log.txt
checkpoints/exp001_pure_profit/: final_results.json
checkpoints/learning_curve_v2/: eval_100k.json  eval_results.json
checkpoints/learning_curve_vs_mixed/: eval_mixed_fixed.json  eval_results.json  eval_zic.json
code/: auction.py  config.py  log.csv  main.py  round_stats.csv  run_experiments.py  test.ipynb  traders.py  utils.py
code/traders/: base.py  (+15 more)
conf/: config.yaml  train_config.yaml
configs/: 01_classical_benchmark.py  01b_canonical_kaplan.py  01c_baseline_zip_symmetric_1k.py  01c_el_vs_mgd_comparison.py  01e_baseline_zip_asymmetric_1k.py  02a_tuned_mgd_tournament.py  02b_fixed_strategy_mix_more_tokens_1k.py  02b_tuned_zip_tournament.py  02c_fixed_strategy_mix_double_agents_1k.py  02c_mgd_vs_zip_optimized.py  02d_mgd_fast_validation.py  02e_quick_validation.py  phase1_ablation_study.py  phase1_classical_benchmark.py  phase1_pairwise_strategy.py  phase2_ppo_evaluation.py  phase2_ppo_training.py  phase3_information_effects.py  phase3_marl_dynamics.py  ppo_convergence_test.py  simple_ppo_handcrafted_test.py  test_classical_tournament.py  test_classical_tournament_large.py  test_ppo_buyer_improved.py  test_ppo_buyer_vs_zic_buyers.py  test_ppo_extended_training.py  test_ppo_full_range.py  test_ppo_seller.py  test_quick_zic.py  test_single_ppo_buyer.py
docs/: critqiue  research_overview.txt  sfi-da.rtf
engine/: __init__.py  agent_factory.py  efficiency.py  event_logger.py  market.py  matchup_generator.py  metrics.py  orderbook.py  token_generator.py  tournament.py  visual_tracer.py
envs/: __init__.py  curriculum_scheduler.py  double_auction_env.py  enhanced_double_auction_env.py  enhanced_features.py  features.py  lstm_double_auction_env.py  vec_env_utils.py
for_gemini/: aggregate_codebase.py
logs/: heartbeat_demo_events.jsonl  kaplan_skeleton_events.jsonl
paper/: GPT_BEHAVIORAL_ANALYSIS.md  paper_plan.md
papers/: (Complex Adaptive Systems) Kinnear K.E.Jr. (ed.) - Advances in genetic programming.. vol.1-MIT (1994).chm
results/: legacy_vs_mixed.json  llm_gpt35_fixed.json  llm_gpt35_fixed2.json  llm_gpt35_v2.json  llm_gpt35_v3.json  llm_gpt35_v4.json  llm_gpt35_v5_simple.json  llm_gpt35_v6_stage_prompts.json  llm_gpt35_validation.json  llm_vs_mixed.json  santafe_experiment_summary.md
scripts/: __init__.py  aggregate_p1_metrics.py  aggregate_p2_results.py  aggregate_p2_santafe.py  aggregate_rr_results.py  aggregate_zip_rr_results.py  analyze_18v18.py  analyze_baseline.py  analyze_grand_melee.py  analyze_grand_tournament.py  analyze_individual_profits.py  analyze_inequality_metrics.py  analyze_kaplan_behavior.py  analyze_kaplan_skeleton_impact.py  analyze_llm_behavior.py  analyze_llm_results.py  analyze_p1_easy.py  analyze_p1_mixed.py  analyze_p1_self.py  analyze_ppo_behavior.py  analyze_price_volatility.py  analyze_scenarios.py  analyze_strategy_behavior.py  analyze_tournament_results.py  analyze_zi_zic.py  calculate_invasibility_complete.py  create_curated_logs.py  create_p2_curated_logs.py  debug_kaplan.py  debug_llm_api.py  diagnose_gd_zic.py  dump_zi_zic_frames.py  eval_learning_curve.py  eval_legacy_vs_mixed.py  eval_llm_vs_mixed.py  eval_ppo_checkpoints.py  eval_ppo_per_env.py  evaluate_ppo.py  fill_p2_results_md.py  generate_case_study_figure.py  (+87 more)
src/: __init__.py  auction.py  config.py  utils.py
tests/: __init__.py  conftest.py  test_auction_integration.py  test_orderbook.py  test_ppo_handcrafted.py  test_utils.py  test_vectorization.py  test_zip_asymmetric_markets.py  test_zip_diagnostics.py  test_zip_multi_period.py  test_zip_trading_volume.py  test_zip_vs_zic.py
tools/: analyze_single_ppo.py  monitor_convergence.py  performance_tracker.py  test_memory_optimizations.py  track_ppo_performance.py
traders/: __init__.py  base.py
(+1042 files in other folders)
